--- a/core/compose.yml
+++ b/core/compose.yml
@@ -44,25 +44,23 @@ services:
     restart: unless-stopped
     # have watchtower control
     labels:
-      - "com.containrrr.watchtower=true"
-  
-  # nginx:
-  #   container_name: nginx
-  #   image: nginx
-  #   depends_on:
-  #     - pihole
-  #   volumes:
-  #     - ${DOCKER_BASE_FOLDER}/templates:/etc/nginx/templates
-  #     - ${DOCKER_BASE_FOLDER}/nginx/config:/etc/nginx/conf.d
-  #     - ${DOCKER_BASE_FOLDER}/nginx/html:/etc/nginx/html
-  #   ports:
-  #     - "480:80"
-  #     - "443:443"
-  #   environment:
-  #     - NGINX_PORT=80
-  #   extra_hosts:
-  #     - "host.docker.internal:host-gateway"
-  #   restart: always
+      - "com.containrrr.watchtower=true
+ 
+  nginx:
+    container_name: nginx
+    image: nginx:alpine
+    depends_on:
+      - pihole
+    volumes:
+      - ${DOCKER_BASE_FOLDER}/templates:/etc/nginx/templates
+      - ${DOCKER_BASE_FOLDER}/nginx/config:/etc/nginx/conf.d
+      - ${DOCKER_BASE_FOLDER}/nginx/html:/etc/nginx/html
+    ports:
+      - "80:80"
+      - "443:443"
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
+    restart: always
 
   # keep docker images updated
   watchtower:
