fix emby music folder

--- a/core/compose.yml
+++ b/core/compose.yml
@@ -44,22 +44,44 @@ services:
     # have watchtower control
     labels:
       - "com.containrrr.watchtower=true"
-  nginx:
-    container_name: nginx
-    image: nginx:alpine
-    depends_on:
-      - pihole
-    volumes:
-      - ${DOCKER_BASE_FOLDER}/templates:/etc/nginx/templates
-      - ${DOCKER_BASE_FOLDER}/nginx/config:/etc/nginx/conf.d
-      - ${DOCKER_BASE_FOLDER}/nginx/html:/etc/nginx/html
-    ports:
-      - "80:80"
-      - "443:443"
-    extra_hosts:
-      - "host.docker.internal:host-gateway"
-    restart: always
+#  nginx:
+#    container_name: nginx
+#    image: nginx:alpine
+#    depends_on:
+#      - pihole
+#    volumes:
+#      - ${DOCKER_BASE_FOLDER}/templates:/etc/nginx/templates
+#      - ${DOCKER_BASE_FOLDER}/nginx/config:/etc/nginx/conf.d
+#      - ${DOCKER_BASE_FOLDER}/nginx/html:/etc/nginx/html
+#    ports:
+#      - "80:80"
+#      - "443:443"
+#    extra_hosts:
+#      - "host.docker.internal:host-gateway"
+#    restart: always
 
+  nginxpm:
+    image: 'jc21/nginx-proxy-manager:latest'
+    restart: unless-stopped
+
+    ports:
+      # These ports are in format <host-port>:<container-port>
+      - '80:80' # Public HTTP Port
+      - '443:443' # Public HTTPS Port
+      - '81:81' # Admin Web Port
+      # Add any other Stream port you want to expose
+      # - '21:21' # FTP
+
+    environment:
+      TZ: ${MY_TMZ}
+
+      # Uncomment this if IPv6 is not enabled on your host
+      DISABLE_IPV6: 'true'
+
+    volumes:
+      - ${DOCKER_BASE_FOLDER}/nginxpm/data:/data
+      - ${DOCKER_BASE_FOLDER}/nginxpm/letsencrypt:/etc/letsencrypt
+  
   # keep docker images updated
   watchtower:
     image: containrrr/watchtower:latest
