--- a/media/compose.yml
+++ b/media/compose.yml
@@ -1,4 +1,3 @@
-version: "3.8"
 
 services:
   # RADARR - MOVIE DOWNLOAD AND MANAGEMENT
@@ -10,6 +9,9 @@ services:
       - arr-net
     mem_limit: 512m
     memswap_limit: 512m
+    depends_on:
+      - sabnzbd
+      - prowlarr
     volumes:
       - ${DOCKER_BASE_FOLDER}/radarr:/config
       - ${MEDIA_DISK_LOCATION}/movies:/movies
@@ -35,6 +37,9 @@ services:
       - arr-net
     mem_limit: 512m
     memswap_limit: 512m
+    depends_on:
+      - sabnzbd
+      - prowlarr
     volumes:
       - ${DOCKER_BASE_FOLDER}/sonarr:/config
       - ${MEDIA_DISK_LOCATION}/shows:/shows
@@ -60,6 +65,9 @@ services:
       - arr-net
     mem_limit: 512m
     memswap_limit: 512m
+    depends_on:
+      - sabnzbd
+      - prowlarr
     volumes:
       - ${DOCKER_BASE_FOLDER}/lidarr/config:/config
       - ${MEDIA_DISK_LOCATION}/music:/music
@@ -85,6 +93,8 @@ services:
       - arr-net
     mem_limit: 256m
     memswap_limit: 256m
+    depends_on:
+      - sabnzbd 
     volumes:
       - ${DOCKER_BASE_FOLDER}/prowlarr:/config
       - /etc/localtime:/etc/localtime:ro
@@ -131,9 +141,12 @@ services:
       - arr-net
     mem_limit: 2g
     memswap_limit: 2g
+    depends_on:
+      - sabnzbd
+      - prowlarr 
     volumes:
       - ${DOCKER_BASE_FOLDER}/emby:/config
-      - /media/steve/SteveBStor1/entertainment/home_movies:/data/home
+      - /media/steve/SteveBStor3/entertainment/home_movies:/data/home
       - ${MEDIA_DISK_LOCATION}/shows:/data/tvshows
       - ${MEDIA_DISK_LOCATION}/movies:/data/movies
       - ${MEDIA_DISK_LOCATION}/music:/data/music
@@ -149,28 +162,7 @@ services:
     labels:
       - "com.centurylinklabs.watchtower.enable=true"
 
-  # OMBI
-  ombi:
-    image: lscr.io/linuxserver/ombi:latest
-    container_name: ombi
-    hostname: ombi
-    networks:
-      - arr-net
-    mem_limit: 256m
-    memswap_limit: 256m
-    volumes:
-      - ${DOCKER_BASE_FOLDER}/ombi/config:/config
-      - /etc/localtime:/etc/localtime:ro
-    ports:
-      - 3579:3579
-    restart: unless-stopped
-    environment:
-      - PUID=1000
-      - PGID=1000
-      - TZ=${MY_TMZ}
-    labels:
-      - "com.centurylinklabs.watchtower.enable=true"
-
+  
   # JELLYSEERR
   seerr:
     image: ghcr.io/fallenbagel/jellyseerr:latest
