--- a/core/compose.yml
+++ b/core/compose.yml
@@ -104,7 +104,7 @@ services:
     image: ghcr.io/gethomepage/homepage:latest
     container_name: homepage
     environment:
-      HOMEPAGE_ALLOWED_HOSTS: 192.168.1.171:3500
+      HOMEPAGE_ALLOWED_HOSTS: 192.168.1.171:3500,109.home.com:3500,109.home.com,192.168.1.171
       PUID: 1000 # optional, your user id
       PGID: 998 # optional, your group id
       TZ: ${MY_TMZ}
@@ -115,7 +115,7 @@ services:
     volumes:
       - ${DOCKER_BASE_FOLDER}/homepage/config:/app/config # Make sure your local config directory exists
       - /var/run/docker.sock:/var/run/docker.sock:ro # optional, for docker integrations
-      - ~/media:/mnt/media:ro
+      - /mnt/media/all:/mnt/media:ro
     env_file:
       - ./.env  
     restart: unless-stopped
